--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
 
   server:
     build: .
+    depends_on:
+      - db
     environment:
       SERBER_PORT: 4000
       DATABASE_HOST: db
@@ -20,5 +22,6 @@ services:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: 12345678
       DATABASE_DBNAME: mydb
+      DATABASE_URL: postgresql://postgres:12345678@db:5432/mydb
     ports:
       - "4000:4000"
